refactor: déplacement de test-image.png et mise à jour de SubmissionFacadeIT