@@ -27,6 +27,8 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.FileSystemResource;
+import org.springframework.core.io.Resource;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -43,6 +45,14 @@ class SubmissionFacadeIT {
   @MockBean private BucketComponent bucketComponent;
   @MockBean private Mailer mailer;
 
+  private Resource getTestImageResource() {
+    File rootFile = new File("test-image.png");
+    if (rootFile.exists()) {
+      return new FileSystemResource(rootFile);
+    }
+    return new ClassPathResource("test-image.png");
+  }
+
   @BeforeEach
   void cleanUp() {
     submissionRepository.deleteAll();
@@ -51,7 +61,13 @@ class SubmissionFacadeIT {
   @Test
   void createSubmission_returns201WithNullThumbnailKey() {
     var body = new LinkedMultiValueMap<String, Object>();
-    body.add("file", new ClassPathResource("test-image.png"));
+
+    var fileResource = getTestImageResource();
+    var fileHeader = new HttpHeaders();
+    fileHeader.setContentType(MediaType.IMAGE_PNG);
+    var fileEntity = new HttpEntity<>(fileResource, fileHeader);
+
+    body.add("file", fileEntity);
     body.add("email", "toky@example.com");
 
     var headers = new HttpHeaders();
@@ -60,7 +76,12 @@ class SubmissionFacadeIT {
 
     var response = restTemplate.postForEntity("/submissions", request, SubmissionResponse.class);
 
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
+    assertThat(response.getStatusCode())
+        .withFailMessage(
+            "Requete echouee avec le statut: %s et corps: %s",
+            response.getStatusCode(), response.getBody())
+        .isEqualTo(HttpStatus.CREATED);
+
     assertThat(response.getBody()).isNotNull();
     assertThat(response.getBody().getThumbnailKey()).isNull();
     assertThat(response.getBody().getEmail()).isEqualTo("toky@example.com");
@@ -97,9 +118,7 @@ class SubmissionFacadeIT {
             .build());
 
     var tempOriginal = File.createTempFile("original", ".png");
-    Files.write(
-        tempOriginal.toPath(),
-        new ClassPathResource("test-image.png").getInputStream().readAllBytes());
+    Files.write(tempOriginal.toPath(), getTestImageResource().getInputStream().readAllBytes());
     when(bucketComponent.download(anyString())).thenReturn(tempOriginal);
     when(bucketComponent.presign(anyString(), any(Duration.class)))
         .thenReturn(new URL("https://example.com/thumb.png"));
